--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
+    "@xyflow/react": "^12.10.1",
     "dotenv": "^17.3.1",
     "next": "16.1.6",
     "openai": "^6.22.0",
