--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
     "@xyflow/react": "^12.10.1",
+    "archiver": "^7.0.1",
     "dotenv": "^17.3.1",
     "next": "16.1.6",
     "openai": "^6.22.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@jest/globals": "^30.2.0",
     "@tailwindcss/postcss": "^4",
+    "@types/archiver": "^7.0.0",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
